# sqrit

./: .git-blame-ignore-revs  .gitignore  CHANGELOG.md  CLAUDE.md  CONTEXT.md  Cargo.toml  LICENSE  README.md  SPEC.md  docker-compose.yml  justfile
.github/workflows/: ci.yml  integration.yml  release.yml
docs/adr/: 0001-async-ratatui-sqlx.md  0002-database-trait-from-start.md  0003-mode-dispatch-keybinding.md  0004-local-integration-runner.md  0005-theme-toml-schema.md  (+3 more)
examples/: clipboard_repro.rs  wl_copy_hang_repro.rs
src/: app.rs  autocomplete.rs  cell_viewer.rs  clipboard.rs  editor.rs  explorer.rs  filter.rs  hint_bar.rs  history.rs  lib.rs  main.rs  mode.rs  picker.rs  results.rs  results_render.rs  sql.rs  theme.rs
tests/: app_config.rs  app_theme.rs  autocomplete.rs  autocomplete_integration.rs  bracketed_paste.rs  cell_viewer_format.rs  cell_viewer_modal.rs  cell_viewer_render.rs  clipboard_writer.rs  command_mode.rs  common.rs  connection_picker.rs  db.rs  editor_buffer.rs  explorer_actions.rs  explorer_tree.rs  fuzzy_filter.rs  help_overlay.rs  help_render.rs  hint_bar.rs  history.rs  history_app_hook.rs  history_picker.rs  insert_cursor.rs  integration.rs  maximize_toggle.rs  mode_bindings.rs  mode_bindings_audit.rs  mysql_adapter.rs  pane_focus.rs  pg_adapter.rs  query_execution.rs  results_cell_highlight.rs  results_copy.rs  results_filter_flow.rs  results_highlight_render.rs  results_pagination.rs  results_table.rs  row_filter.rs  schema_mysql.rs  (+13 more)
themes/: catppuccin-macchiato.toml  gruvbox.toml  nord.toml  rose-pine.toml  tokyo-night.toml
(+32 files in other folders)
