[package]
name = "sqrit"
version = "0.3.0"
edition = "2021"
description = "The lazygit of SQL databases"
license = "MIT"

[[bin]]
name = "sqrit"
path = "src/main.rs"

[dependencies]
ratatui = "0.29"
crossterm = { version = "0.28", features = ["bracketed-paste"] }
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "mysql", "sqlite"] }
rusqlite = { version = "0.32", features = ["bundled", "column_decltype"] }
toml = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
csv = "1"
arboard = "3"
chrono = "0.4"
unicode-width = "0.2"
async-trait = "0.1"
dirs = "6"
anyhow = "1"
urlencoding = "2"
nucleo-matcher = "0.3"

[dev-dependencies]
tempfile = "3"
